source/NS-project/test/NectarSun_tests.txt

AllTests/HelloTest.cpp:59: error: Failure in TEST(HelloWorld, PrintOk)
	expected <Oh hi, Mark!
>
	but was  <Hello World!
>
	difference starts at position 0 at: <          Hello Worl>
	                                               ^

.
Errors (1 failures, 1 tests, 1 ran, 1 checks, 0 ignored, 0 filtered out, 0 ms)

